--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview --port 8080"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
     "react-daisyui": "^5.0.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "theme-change": "^2.5.0"
   },
   "devDependencies": {
