--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-daisyui": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "react-smart-flexbox": "^0.0.7",
     "theme-change": "^2.5.0"
   },
   "devDependencies": {
