--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview --port 8080"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
     "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
     "react-daisyui": "^5.0.0",
