--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "file-loader": "^6.2.0",
-    "openapi-typescript": "^6.7.5",
+    "openapi-typescript": "^7.0.0-next.8",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.5",
