--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview --port 8080"
+    "preview": "vite preview --port 8080",
+    "test:ts": "tsc --noEmit"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -16,7 +17,7 @@
     "@mui/material": "^5.15.14",
     "@reduxjs/toolkit": "^2.2.2",
     "@types/react-router-dom": "^5.3.3",
-    "openapi-fetch": "^0.9.3",
+    "openapi-fetch": "^0.9.4",
     "react": "^18.2.0",
     "react-daisyui": "^5.0.0",
     "react-dom": "^18.2.0",
