--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^5.15.14",
     "@reduxjs/toolkit": "^2.2.2",
     "@types/react-router-dom": "^5.3.3",
+    "body-parser": "^1.20.2",
+    "jwt-decode": "^4.0.0",
     "openapi-fetch": "^0.9.4",
     "react": "^18.2.0",
     "react-daisyui": "^5.0.0",
